Сделана разметка главной страницы

--- a/source/sass/global/global.scss
+++ b/source/sass/global/global.scss
@@ -17,9 +17,9 @@ body {
   width: 100%;
   min-height: 100%;
   margin: 0;
-  font-family: $font-lato;
-  font-size: 16px;
-  line-height: 24px;
+  font-family: 'Montserrat';
+  font-size: 14px;
+  line-height: 22px;
   font-weight: 400;
   color: $main-color-text;
   background-color: $main-color-bg;
@@ -65,4 +65,24 @@ p {
   padding: 0;
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+
+.btn-main-style {
+  padding: auto 0;
+
+  @include font(14px, 20px, 500);
+  color: $main-color-text-button;
+  text-align: center;
+
+  background-color: $main-color-bg-button;
+  border: none;
+  &:active {
+    opacity: 0.5;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .btn-main-style:hover {
+    background-color: #000000;
+  }
 }
