--- a/source/sass/components/header.scss
+++ b/source/sass/components/header.scss
@@ -1,8 +1,242 @@
 .header {
+  width: 100%;
   min-height: 60px;
 
   background-color: $second-background;
+  &__bg-decorate {
+    position: relative;
+
+    width: $mobile-width;
+    min-height: inherit;
+    margin: 0 auto;
+    &::before {
+      position: absolute;
+      content: '';
+      top: 0;
+      right: 320px;
+
+      width: 5000px;
+      height: 100%;
+
+      background-color: $main-background;
+    }
+  }
+  &__container {
+    position: relative;
+
+    display: flex;
+    justify-content: space-between;
+    width: $mobile-width;
+    min-height: inherit;
+    padding: 14px 20px 0 17px;
+    margin: 0 auto;
+  }
+  &__burger {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 25px;
+    height: 19px;
+    padding: 0;
+    margin-top: 6px;
+
+    background-color: transparent;
+    border: none;
+    &--open {
+      position: relative;
+      z-index: 3;
+
+      width: 25px;
+      height: 25px;
+
+      border-radius: 50%;
+      border: 1px solid #000000;
+      border-bottom: none;
+      border-left: none;
+      border-bottom-left-radius: 0%;
+      background-color: #ffffff;
+      &::before,
+      &::after {
+        position: absolute;
+        content: '';
+        top: 49%;
+        left: 21%;
+
+        width: 15px;
+        height: 2px;
+
+        border-radius: 5px;
+        background-color: #ff9646;
+      }
+      &::before {
+        transform: rotate(-45deg);
+      }
+      &::after {
+        transform: rotate(45deg);
+      }
+      & .header__burger-decorate {
+        display: none;
+      }
+    }
+    // &--nojs {
+    //   display: none;
+    // }
+  }
+  &__burger-decorate {
+    width: 100%;
+    height: 3px;
+
+    border-radius: 2px;
+    background-color: #000000;
+  }
+  &__wrapper-navigation {
+    position: relative;
+  }
   &__logo-text {
     display: none;
+  }
+}
+
+.navigation {
+  position: absolute;
+  z-index: 2;
+  top: 17px;
+  left: -307px;
+
+  width: 320px;
+  min-height: 250px;
+
+  text-align: center;
+
+  background-color: #ffffff;
+  border-radius: 3px;
+  border: 1px solid #000000;
+  &--close {
+    display: none;
+  }
+  &--open {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  // &--nojs {
+  //   display: flex;
+  //   flex-direction: column;
+  //   justify-content: space-between;
+  // }
+  &__item {
+    min-height: 30px;
+    padding-top: 4px;
+
+    border-bottom: 1px solid #000000;
+  }
+  &__link {
+    &--contact-number {
+      @include font(18px, 22px, 600);
+    }
+    &:active {
+      opacity: 0.5;
+    }
+  }
+  &__btn {
+    width: 100%;
+    min-height: 40px;
+    padding: 11px 17px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .header {
+    min-height: 160px;
+    &__bg-decorate {
+      position: relative;
+
+      width: $desktop-width;
+      min-height: inherit;
+      margin: 0 auto;
+      &::before {
+        right: 1183px;
+      }
+    }
+    &__container {
+      width: $desktop-width;
+      justify-content: flex-start;
+      padding: 26px 351px;
+    }
+    &__wrapper-logo {
+      margin-left: -14px;
+      margin-right: 205px;
+
+      background-color: transparent;
+      border: none;
+    }
+    &__wrapper-logo {
+      display: flex;
+      width: 274px;
+    }
+    &__logo {
+      padding-top: 2px;
+      margin-right: 4px;
+    }
+    &__img {
+      width: 154px;
+      height: 57px;
+    }
+    &__logo-text {
+      display: block;
+
+      @include font(14px, 19.6px, 700);
+    }
+    &__wrapper-navigation {
+      width: 753px;
+      & div {
+        width: 170px;
+      }
+    }
+    &__burger {
+      display: none;
+    }
+
+  }
+
+  .navigation {
+    position: relative;
+    top: 0;
+    left: 0;
+
+    display: flex;
+    width: 753px;
+    min-height: 72px;
+
+    background-color: transparent;
+    border: none;
+    & div {
+      margin-top: 22px;
+    }
+    &__list {
+      display: flex;
+      flex-wrap: wrap;
+      width: 100%;
+      margin-top: 18px;
+      margin-right: 73px;
+    }
+    &__item {
+      border: none;
+      &:not(:last-child) {
+        margin-right: 35px;
+      }
+    }
+    &__link {
+      &:hover {
+        color: $second-color-text;
+      }
+      &--contact-number {
+        display: block;
+        margin-bottom: 10px;
+      }
+    }
+    &__btn {
+      width: 170px;
+    }
   }
 }
