--- a/source/sass/components/title-decorate.scss
+++ b/source/sass/components/title-decorate.scss
@@ -17,6 +17,8 @@
 @media (min-width: $desktop-width) {
   .title-decorate {
     &::before {
+      left: -40px;
+
       width: 120px;
       height: 18px;
     }
