--- a/source/sass/utils/variables.scss
+++ b/source/sass/utils/variables.scss
@@ -1,6 +1,7 @@
 $main-color-text: #202020;
 $second-color-text: #ff9646;
 $main-color-bg: #ffffff;
+$second-color-bg: #202020;
 $main-color-bg-button: #ff9646;
 $main-color-text-button: #ffffff;
 $main-color-decorate: #f9bb88;
