--- a/source/sass/components/index/monolithic.scss
+++ b/source/sass/components/index/monolithic.scss
@@ -1,23 +1,24 @@
 .monolithic {
   min-height: 1147px;
-  margin-bottom: 80px;
+  margin-bottom: 57px;
   &__container {
     width: $mobile-width;
-    padding: 0 20px;
     margin: 0 auto;
     &--image {
       width: $mobile-width;
       padding: 0;
       margin: 0 auto;
     }
-    &:last-child {
-      margin-top: -36px;
-    }
   }
   &__title {
+    padding: 0 20px;
     margin-bottom: 40px;
 
     @include font(29px, 34.8px, 700);
+  }
+  &__wrapper-description {
+    padding: 0 20px;
+    margin-top: -36px;
   }
   &__list {
     min-height: 598px;
@@ -32,5 +33,48 @@
   }
   &__description {
     @include font(12px, 16.8px, 400);
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .monolithic {
+    min-height: 780px;
+    margin-bottom: 100px;
+    &__container {
+      display: flex;
+      flex-wrap: wrap;
+      width: $desktop-width;
+      padding: 0 351px;
+    }
+    &__title {
+      width: 100%;
+      margin-bottom: 48px;
+      padding-left: 0;
+
+      @include font(36px, 43.2px, 700);
+    }
+    &__wrapper-description {
+      width: 528px;
+      padding: 0;
+      margin-top: 0;
+    }
+    &__wrapper-image {
+      margin: 12px 85px 0 -15px;
+    }
+    &__img {
+      width: 553px;
+      height: 634px;
+    }
+    &__item {
+      margin-bottom: 38px;
+    }
+    &__subtitle {
+      margin-bottom: 7px;
+    }
+    &__description {
+      width: 491px;
+
+      @include font(14px, 19.6px, 400);
+    }
   }
 }
