--- a/source/sass/components/slider-pagination.scss
+++ b/source/sass/components/slider-pagination.scss
@@ -17,6 +17,9 @@
       background-color: $main-color-bg-button;
     }
   }
+  &--finished-projects {
+    margin-bottom: 40px;
+  }
   &__btn {
     width: 9px;
     height: 9px;
