--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -27,3 +27,4 @@
 @import '../sass/components/company/about-company.scss';
 @import '../sass/components/company/finished-projects.scss';
 @import '../sass/components/company/reviews.scss';
+@import '../sass/components/company/principles.scss';
