--- a/source/sass/components/breadcrumbs.scss
+++ b/source/sass/components/breadcrumbs.scss
@@ -1,7 +1,52 @@
 .breadcrumbs {
+  &__list {
+    display: flex;
+    margin-bottom: 23px;
+  }
+  &__item {
+    position: relative;
+    margin-right: 25px;
+    &:not(:last-child)::before,
+    &:not(:last-child)::after {
+      position: absolute;
+      content: '';
+
+      width: 4px;
+      height: 1px;
+
+      background-color: $main-color-text;
+    }
+    &::before {
+      top: 11px;
+      right: -16px;
+
+      transform: rotate(45deg);
+    }
+    &::after {
+      top: 13px;
+      right: -16px;
+
+      transform: rotate(-45deg);
+    }
+  }
   &__link {
+    @include font(12px, 16.8px, 400);
     &--to-main {
       display: none;
     }
+    &:active {
+      opacity: 0.7;
+    }
   }
 }
+
+@media (min-width: $desktop-width) {
+  .breadcrumbs {
+    &__link {
+      &:hover {
+        opacity: 0.5;
+      }
+    }
+  }
+}
+
