--- a/source/sass/components/company/about-company.scss
+++ b/source/sass/components/company/about-company.scss
@@ -1,4 +1,7 @@
 .about-company {
+  min-height: 1406px;
+
+  background-color: $second-background;
   &__bg-decorate {
     position: relative;
 
@@ -12,7 +15,7 @@
       right: 320px;
 
       width: 5000px;
-      height: 100%;
+      height: 503px;
 
       background-color: $main-background;
   }
@@ -22,8 +25,20 @@
     z-index: 1;
 
     width: $mobile-width;
-    padding: 0 20px;
+    padding: 15px 20px 0;
     margin: 0 auto;
+    &::before {
+      position: absolute;
+      content: '';
+      z-index: 1;
+      left: 100px;
+      bottom: -22px;
+
+      width: 96px;
+      height: 96px;
+
+      background: url('../img/decorate-1.svg') no-repeat;
+    }
   }
   &__wrapper {
     &:first-child {
@@ -31,6 +46,27 @@
 
       width: 380px;
       height: 370px;
+      margin-bottom: 40px;
+    }
+    &:nth-child(2) {
+      margin-bottom: 60px;
+    }
+  }
+  &__title {
+    position: relative;
+    margin-bottom: 38px;
+
+    @include font(29px, 34.8px, 700);
+    &::after {
+      position: absolute;
+      content: '';
+      top: -1px;
+      left: 304px;
+
+      width: 96px;
+      height: 96px;
+
+      background: url('../img/decorate-1.svg') no-repeat;
     }
   }
   &__decorate-square {
@@ -46,6 +82,168 @@
 
     background-color: #727272;
   }
+  &__motto {
+    width: 300px;
+    margin-bottom: 20px;
+
+    @include font(23px, 36.8px, 600);
+  }
+  &__description {
+    margin-bottom: 17px;
+
+    @include font(12px, 19.2px, 400);
+  }
+  &__subtitle {
+    position: relative;
+    width: 260px;
+    margin-bottom: 25px;
+
+    @include font(23px, 36.8px, 600);
+    &::after {
+      position: absolute;
+      content: '';
+      top: 1px;
+      right: -141px;
+
+      width: 96px;
+      height: 96px;
+
+      background: url('../img/decorate-1.svg') no-repeat;
+    }
+  }
+  &__list {
+    padding-bottom: 58px;
+  }
+  &__item {
+    position: relative;
+
+    display: flex;
+    min-height: 80px;
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
+    &::before {
+      position: absolute;
+      content: '';
+
+      width: 21px;
+      height: 80px;
+
+      background-color: $main-color-decorate;
+    }
+    & span {
+      position: relative;
+      z-index: 1;
+
+      width: 65px;
+      height: 50px;
+      padding-top: 15px;
+      padding-left: 9px;
+      margin-right: 25px;
+
+      @include font(18px, 16.2px, 400);
+      text-align: center;
+      & b {
+        @include font(36px, 32.4px, 400);
+      }
+    }
+  }
+  &__text {
+    padding-top: 30px;
+
+    @include font(18px, 25.2px, 600);
+  }
+  &__advantages {
+    &-list {
+      position: relative;
+
+      display: flex;
+      flex-direction: column;
+      padding: 79px 0 85px 0;
+
+      background-color: $main-color-bg;
+      &::before {
+        position: absolute;
+        content: '';
+        top: 0;
+        right: 370px;
+
+        width: 5000px;
+        height: 100%;
+
+        background-color: $main-color-bg;
+      }
+      &::after {
+        position: absolute;
+        content: '';
+        top: 0;
+        left: 379px;
+
+        width: 5000px;
+        height: 100%;
+
+        background-color: $main-color-bg;
+      }
+    }
+    &-item {
+      position: relative;
+
+      min-height: 232px;
+      padding: 42px 25px 30px 107px;
+      &::before {
+        position: absolute;
+        content: '';
+        z-index: 1;
+        top: 57px;
+        left: 18px;
+
+        width: 60px;
+        height: 60px;
+      }
+      &::after {
+        position: absolute;
+        content: '';
+        top: 44px;
+        left: 11px;
+
+        width: 21px;
+        height: 80px;
+
+        background-color: $main-background;
+      }
+      &:nth-child(1) {
+        border-top: 2px solid $second-background;
+        border-left: 2px solid $second-background;
+        border-right: 2px solid $second-background;
+        &::before {
+          background: url('../img/about-company/advantages-company/reliability.svg') no-repeat;
+        }
+      }
+      &:nth-child(2) {
+        border: 2px solid $second-background;
+        &::before {
+          background: url('../img/about-company/advantages-company/speed.svg') no-repeat;
+        }
+      }
+      &:nth-child(3) {
+        border-bottom: 2px solid $second-background;
+        border-left: 2px solid $second-background;
+        border-right: 2px solid $second-background;
+        &::before {
+          background: url('../img/about-company/advantages-company/free.svg') no-repeat;
+        }
+      }
+    }
+    &-subitem {
+      width: 130px;
+      margin-bottom: 7px;
+
+      @include font(18px, 25.2px, 600);
+    }
+    &-text {
+      @include font(14px, 23.8px, 400);
+    }
+  }
 }
 
 @media (min-width) {
@@ -57,6 +255,14 @@
     &__container {
       width: $desktop-width;
       padding: 0 351px;
+    }
+    &__advantages {
+      &-list {
+        &::before,
+        &::after {
+          width: 0;
+        }
+      }
     }
   }
 }
