--- a/source/sass/components/breadcrumbs.scss
+++ b/source/sass/components/breadcrumbs.scss
@@ -42,9 +42,27 @@
 
 @media (min-width: $desktop-width) {
   .breadcrumbs {
+    display: flex;
+    justify-content: space-between;
     &__link {
-      &:hover {
+      @include font(14px, 19.6px, 400);
+      &--to-main {
+        display: block;
+        padding-top: 1px;
+        &:hover {
+          color: $second-color-text;
+          opacity: 1;
+        }
+        &:active {
+          color: $main-color-text;
+          opacity: 0.7;
+        }
+      }
+      &:not(.breadcrumbs__link--current, .breadcrumbs__link--to-main):hover {
         opacity: 0.5;
+      }
+      &:not(.breadcrumbs__link--current, .breadcrumbs__link--to-main):active {
+        opacity: 0.8;
       }
     }
   }
