Добавлена страница "Каталог"

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -15,7 +15,7 @@
 /* index */
 @import '../sass/components/index/promo.scss';
 @import '../sass/components/index/advantages.scss';
-@import '../sass/components/index/type-laddder.scss';
+@import '../sass/components/index/type-ladder.scss';
 @import '../sass/components/index/model.scss';
 @import '../sass/components/index/about-us.scss';
 @import '../sass/components/index/examples.scss';
@@ -28,3 +28,6 @@
 @import '../sass/components/company/finished-projects.scss';
 @import '../sass/components/company/reviews.scss';
 @import '../sass/components/company/principles.scss';
+
+/* catalog */
+@import '../sass/components/catalog/catalog.scss';
