--- a/source/sass/components/catalog/catalog.scss
+++ b/source/sass/components/catalog/catalog.scss
@@ -54,13 +54,13 @@
       margin-bottom: 0;
 
       overflow-x: auto;
-    }
-    & .type-ladder__item {
-      margin-right: 0;
+      & .type-ladder__item {
+        margin-right: 0;
 
-      background-color: #ffffff;
-      &:not(:last-child) {
-        margin-bottom: 30px;
+        background-color: #ffffff;
+        &:not(:last-child) {
+          margin-bottom: 30px;
+        }
       }
     }
   }
@@ -68,12 +68,13 @@
 
 @media (min-width: $desktop-width) {
   .catalog {
+    margin-bottom: 136px;
     &__bg-decorate {
       width: $desktop-width;
       &::before {
         right: 1183px;
 
-        height: 701px;
+        height: 483px;
       }
     }
     &__container {
@@ -83,12 +84,29 @@
         display: none;
       }
     }
+    &__title {
+      padding-top: 5px;
+
+      @include font(36px, 1.2, 700);
+    }
   }
 
   .type-ladder {
     &__list {
       &--catalog {
+        display: grid;
+        grid-template-columns: repeat(3, 386px);
+        grid-template-rows: repeat(2, 538px);
+        grid-gap: 60px 30px;
         width: 1218px;
+        & .type-ladder__item {
+          margin: 0;
+        }
+        & .type-ladder__item:nth-child(4),
+        & .type-ladder__item:nth-child(5),
+        & .type-ladder__item:nth-child(6) {
+          display: flex;
+        }
       }
     }
   }
