Сверстана страница "Забежная лестница"

--- a/source/sass/components/title-decorate.scss
+++ b/source/sass/components/title-decorate.scss
@@ -13,7 +13,8 @@
     background-color: $main-background;
   }
   &--about-company,
-  &--catalog {
+  &--catalog,
+  &--winder-ladder {
     &::before {
       bottom: 2px;
       left: -20px;
