--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -31,3 +31,6 @@
 
 /* catalog */
 @import '../sass/components/catalog/catalog.scss';
+
+/* winder-ladder */
+@import '../sass/components/winder-ladder/winder-ladder.scss';
