--- a/source/sass/components/index/advantages.scss
+++ b/source/sass/components/index/advantages.scss
@@ -34,6 +34,8 @@
 
     min-height: 232px;
     padding: 38px 27px 40px 110px;
+
+    background-color: #ffffff;
     &::before {
       position: absolute;
       content: '';
