--- a/source/sass/components/winder-ladder/winder-ladder.scss
+++ b/source/sass/components/winder-ladder/winder-ladder.scss
@@ -118,11 +118,24 @@
     }
   }
   &__list {
-    padding: 17px 0 21px 14px;
-
-    list-style: disc;
+    padding: 17px 0 14px 11px;
     p {
-      @include font(12px, 1.4, 400);
+      @include font(12px, 1.5, 400);
+    }
+  }
+  &__item {
+    position: relative;
+    &::before {
+      position: absolute;
+      content: '';
+      top: 8px;
+      left: -9px;
+
+      width: 3px;
+      height: 3px;
+
+      background-color: $main-color-text;
+      border-radius: 50%;
     }
   }
   &__wrapper-calculate {
@@ -155,6 +168,7 @@
 @media (min-width: $desktop-width) {
   .winder-ladder {
     min-height: 977px;
+    margin-bottom: 87px;
     &__bg-decorate {
       width: $desktop-width;
       &::before {
@@ -172,8 +186,76 @@
     }
     &__title {
       padding-top: 5px;
+      margin-bottom: 45px;
 
       @include font(36px, 1.2, 700);
+    }
+    &__wrapper-img {
+      width: 520px;
+      height: 400px;
+      margin-right: 67px;
+      margin-bottom: 0;
+    }
+    &__wrapper {
+      position: relative;
+
+      display: flex;
+      width: 1218px;
+      min-height: 890px;
+      padding: 50px 104px 60px 37px;
+
+      background-color: #ffffff;
+
+      box-shadow: 0px 4px 26px 0px rgba(0, 0, 0, 0.08);
+    }
+    &__wrapper-inner {
+      margin-bottom: 0;
+    }
+    &__img {
+      position: relative;
+      left: 0;
+    }
+    &__subtitle {
+      margin-bottom: 43px;
+      &::after {
+        top: 57px;
+      }
+    }
+    &__price {
+      margin-bottom: 23px;
+    }
+    &__text {
+      width: 416px;
+      margin-bottom: 30px;
+
+      font-size: 14px;
+    }
+    &__btn {
+      margin-bottom: 50px;
+    }
+    &__description {
+      font-size: 14px;
+      &:last-child {
+        margin-top: 22px;
+      }
+    }
+    &__list {
+      padding: 21px 0 17px 11px;
+      & p {
+        font-size: 14px;
+      }
+    }
+    &__item {
+      margin-bottom: 5px;
+    }
+    &__wrapper-calculate {
+      position: absolute;
+      left: 74px;
+      bottom: 100px;
+
+      width: 446px;
+      min-height: 220px;
+      padding: 40px 67px 40px;
     }
     &__link-calculate {
       &:hover {
@@ -183,7 +265,7 @@
     &__text-calculate {
       margin-bottom: 25px;
 
-      @include font(23px, 32.2px, 400);
+      @include font(23px, 1.4, 400);
     }
   }
 }
